Fixed margin above hero image to align with navigation

--- a/assets/css/2-base/_base.sass
+++ b/assets/css/2-base/_base.sass
@@ -3,7 +3,7 @@ body
   font-weight: 300
 
 .jumbotron-fluid
-    margin-top: 40px
+    margin-top: 57px
 
 h1, h2, h3, h4, h5, h6
     margin: 20px 0
